--- a/package.json
+++ b/package.json
@@ -1,8 +1,74 @@
 {
-  "name": "amigo-finder",
+  "name": "amigofinder",
   "version": "1.0.0",
-  "description": "",
+  "description": "amigo",
   "main": "server.js",
+  "dependencies": {
+    "array-flatten": "^1.1.1",
+    "accepts": "^1.3.7",
+    "body-parser": "^1.19.0",
+    "bignumber.js": "^7.2.1",
+    "bytes": "^3.1.0",
+    "content-type": "^1.0.4",
+    "content-disposition": "^0.5.3",
+    "cookie-signature": "^1.0.6",
+    "cookie": "^0.4.0",
+    "debug": "^2.6.9",
+    "core-util-is": "^1.0.2",
+    "depd": "^1.1.2",
+    "destroy": "^1.0.4",
+    "ee-first": "^1.1.1",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "encodeurl": "^1.0.2",
+    "finalhandler": "^1.1.2",
+    "express": "^4.17.1",
+    "forwarded": "^0.1.2",
+    "fresh": "^0.5.2",
+    "iconv-lite": "^0.4.24",
+    "http-errors": "^1.7.2",
+    "ipaddr.js": "^1.9.0",
+    "isarray": "^1.0.0",
+    "merge-descriptors": "^1.0.1",
+    "media-typer": "^0.3.0",
+    "mime-types": "^2.1.24",
+    "ms": "^2.0.0",
+    "mysql": "^2.17.1",
+    "mime-db": "^1.40.0",
+    "n": "^4.1.0",
+    "on-finished": "^2.3.0",
+    "negotiator": "^0.6.2",
+    "nvm": "^0.0.4",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "qs": "^6.7.0",
+    "proxy-addr": "^2.0.5",
+    "range-parser": "^1.2.1",
+    "process-nextick-args": "^2.0.1",
+    "methods": "^1.1.2",
+    "raw-body": "^2.4.0",
+    "safe-buffer": "^5.1.2",
+    "readable-stream": "^2.3.6",
+    "sqlstring": "^2.3.1",
+    "setprototypeof": "^1.1.1",
+    "statuses": "^1.5.0",
+    "serve-static": "^1.14.1",
+    "type-is": "^1.6.18",
+    "toidentifier": "^1.0.0",
+    "unpipe": "^1.0.0",
+    "string_decoder": "^1.1.1",
+    "util-deprecate": "^1.0.2",
+    "util": "^0.10.4",
+    "utils-merge": "^1.0.1",
+    "send": "^0.17.1",
+    "mime": "^1.6.0",
+    "inherits": "^2.0.3",
+    "safer-buffer": "^2.1.2",
+    "vary": "^1.1.2"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -11,21 +77,10 @@
     "type": "git",
     "url": "git+https://github.com/marcuswhitmore/AmigoFinder.git"
   },
-  "author": "Stefanie Ding",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/marcuswhitmore/AmigoFinder/issues"
   },
-  "homepage": "https://github.com/marcuswhitmore/AmigoFinder#readme",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.17.1",
-    "mysql": "^2.11.1",
-    "n": "^4.1.0",
-    "nvm": "0.0.4",
-    "path": "^0.12.7"
-  },
-  "engines": {
-    "node": "6.11.1"
-  }
+  "homepage": "https://github.com/marcuswhitmore/AmigoFinder#readme"
 }
