--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "yarn server.js"
   },
   "repository": {
     "type": "git",
